--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body { font-family: Arial; text-align: center; margin-top: 50px; }
 </head>
 <body>
 
-<h2>Gib das Lösunsfddfgswort ein</h2>
+<h2>Gibt den richtigen Code ein:</h2>
 
 <input type="password" id="pw" placeholder="Passwort">
 <button onclick="check()">OK</button>
