--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body { font-family: Arial; text-align: center; margin-top: 50px; }
 
 <div id="video">
   <video width="90%" controls>
-    <source src="video.mp4" type="video/mp4">
+    <source src="ScreenRecording_12-23-2025 18-02-46_1.mp4" type="video/mp4">
     Dein Browser unterstützt kein Video.
   </video>
 </div>
