--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body { font-family: Arial; text-align: center; margin-top: 50px; }
 <p id="msg" style="color:red;"></p>
 
 <div id="video">
+  <div style="position:relative; width:100%; height:0px; padding-bottom:75.000%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/kb5ewp?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
   <video width="90%" controls>
     <source src="video.mp4" type="video/mp4">
     Dein Browser unterstützt kein Video.
