--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@ body { font-family: Arial; text-align: center; margin-top: 50px; }
 
 <p id="msg" style="color:red;"></p>
 
-<div id="video">
-  <div style="position:relative; width:100%; height:0px; padding-bottom:75.000%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/kb5ewp?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
-  <video width="90%" controls>
-    <source src="video.mp4" type="video/mp4">
-    Dein Browser unterstützt kein Video.
-  </video>
+<div id="bild">
+  <img src="bild.jpg" alt="Geheimer Hinweis">
 </div>
 
 <script>
@@ -31,7 +27,7 @@ function check() {
   const eingabe = document.getElementById("pw").value;
 
   if (eingabe === richtig) {
-    document.getElementById("video").style.display = "block";
+    document.getElementById("bild").style.display = "block";
     document.getElementById("msg").innerText = "";
   } else {
     document.getElementById("msg").innerText = "Falsches Passwort!";
