--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body { font-family: Arial; text-align: center; margin-top: 50px; }
 
 <div id="bild">
   <img src="bild.jpg" alt="Geheimer Hinweis">
+  <p>+180 Grad</p>
 </div>
   
 <script>
