--- a/testergebnis.html
+++ b/testergebnis.html
@@ -1,3 +1,43 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Schatz such!</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin-top: 50px;
+}
+</style>
+</head>
 <body>
-  <p>test</p>
+
+<h2>Kopiere dein Testergebnis in das Eingabefeld:</h2>
+
+<input type="text" id="pw" placeholder="Testergebnis">
+<button onclick="check()">OK</button>
+
+<p id="msg" style="color:red;"></p>
+
+<div id="nextHinweis">
+  <p>hier</p>
+</div>
+
+<script>
+function check() {
+  const gueltigePasswoerter = ["Spontan, lebensfroh und immer für Überraschungen gut, das bist du, der Berliner. Du probierst gern Neues aus und nimmst das Leben nicht zu ernst. Mit dir wird es selten langweilig, auch wenn du nicht immer planst, was als Nächstes kommt. Wie ein Berliner bist du süß, ein bisschen unberechenbar und überall gern gesehen."];
+  const eingabe = document.getElementById("pw").value.trim();
+
+  if (gueltigePasswoerter.includes(eingabe)) {
+    document.getElementById("nextHinweis").style.display = "block";
+    document.getElementById("msg").innerText = "";
+  } else {
+    document.getElementById("msg").innerText = "Falsch!";
+    document.getElementById("bild").style.display = "none";
+  }
+}
+</script>
+
 </body>
+</html>
