--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ img {
 <div id="bild">
   <img src="bild.jpg" alt="Geheimer Hinweis">
   <p>-180 Grad</p>
+  <img src="bild2.jpg" alt="Geheimer Hinweis 2">
 </div>
 
 <script>
