--- a/testergebnis.html
+++ b/testergebnis.html
@@ -19,7 +19,12 @@ body {
 </head>
 <body>
 
-<h2>Kopiere dein Testergebnis in das Eingabefeld:</h2>
+
+<h2>Werde zu JFK auf TesteDich.de </h2>
+<p></p>
+<href>https://www.testedich.de/persoenlichkeitstests/lebensmittel/andere-lebensmittel/quiz78/1766163257/welches-hefeteiggebaeck-bist-du</href>
+<p></p>
+<h2>Kopiere das korrekte Testergebnis in das Eingabefeld:</h2>
 
 <input type="text" id="pw" placeholder="Testergebnis">
 <button onclick="check()">OK</button>
@@ -27,7 +32,7 @@ body {
 <p id="msg" style="color:red;"></p>
 
 <div id="nextHinweis">
-  <p>hier</p>
+  <p></p>
 </div>
 
 <script>
