--- a/testergebnis.html
+++ b/testergebnis.html
@@ -32,6 +32,7 @@ body {
 <p id="msg" style="color:red;"></p>
 
 <div id="nextHinweis">
+  <p>Koordinateneingabe:</p>
   <input type="text" id="pw2" placeholder="Testergebnis">
   <button onclick="check2()">OK</button>
 </div>
